MOBILE-238 Fixing Folder: the back icon is too small.

--- a/css/styles.css
+++ b/css/styles.css
@@ -970,3 +970,8 @@ button {
   padding-right: 10px;
   word-wrap: break-word;
 }
+
+.back-row a {
+  display: block;
+  padding: 15px;
+}
